backend/app/evidence_out/vpc_network_20260323_065931.json
{
  "collector": "vpc_network",
  "account_id": "405466951861",
  "region": "eu-north-1",
  "collected_at": "2026-03-23T06:59:31.232156",
  "vpcs": [
    {
      "OwnerId": "405466951861",
      "InstanceTenancy": "default",
      "CidrBlockAssociationSet": [
        {
          "AssociationId": "vpc-cidr-assoc-0424570e6b9fc14f9",
          "CidrBlock": "172.31.0.0/16",
          "CidrBlockState": {
            "State": "associated"
          }
        }
      ],
      "IsDefault": true,
      "BlockPublicAccessStates": {
        "InternetGatewayBlockMode": "off"
      },
      "VpcId": "vpc-068af8c85c6322683",
      "State": "available",
      "CidrBlock": "172.31.0.0/16",
      "DhcpOptionsId": "dopt-09d5abbfcedeba9b3"
    }
  ],
  "subnets": [
    {
      "AvailabilityZoneId": "eun1-az3",
      "MapCustomerOwnedIpOnLaunch": false,
      "OwnerId": "405466951861",
      "AssignIpv6AddressOnCreation": false,
      "Ipv6CidrBlockAssociationSet": [],
      "SubnetArn": "arn:aws:ec2:eu-north-1:405466951861:subnet/subnet-03ef754e024bb86f5",
      "EnableDns64": false,
      "Ipv6Native": false,
      "PrivateDnsNameOptionsOnLaunch": {
        "HostnameType": "ip-name",
        "EnableResourceNameDnsARecord": false,
        "EnableResourceNameDnsAAAARecord": false
      },
      "BlockPublicAccessStates": {
        "InternetGatewayBlockMode": "off"
      },
      "SubnetId": "subnet-03ef754e024bb86f5",
      "State": "available",
      "VpcId": "vpc-068af8c85c6322683",
      "CidrBlock": "172.31.0.0/20",
      "AvailableIpAddressCount": 4091,
      "AvailabilityZone": "eu-north-1c",
      "DefaultForAz": true,
      "MapPublicIpOnLaunch": true
    },
    {
      "AvailabilityZoneId": "eun1-az2",
      "MapCustomerOwnedIpOnLaunch": false,
      "OwnerId": "405466951861",
      "AssignIpv6AddressOnCreation": false,
      "Ipv6CidrBlockAssociationSet": [],
      "SubnetArn": "arn:aws:ec2:eu-north-1:405466951861:subnet/subnet-0b7e1287a1c959edd",
      "EnableDns64": false,
      "Ipv6Native": false,
      "PrivateDnsNameOptionsOnLaunch": {
        "HostnameType": "ip-name",
        "EnableResourceNameDnsARecord": false,
        "EnableResourceNameDnsAAAARecord": false
      },
      "BlockPublicAccessStates": {
        "InternetGatewayBlockMode": "off"
      },
      "SubnetId": "subnet-0b7e1287a1c959edd",
      "State": "available",
      "VpcId": "vpc-068af8c85c6322683",
      "CidrBlock": "172.31.32.0/20",
      "AvailableIpAddressCount": 4091,
      "AvailabilityZone": "eu-north-1b",
      "DefaultForAz": true,
      "MapPublicIpOnLaunch": true
    },
    {
      "AvailabilityZoneId": "eun1-az1",
      "MapCustomerOwnedIpOnLaunch": false,
      "OwnerId": "405466951861",
      "AssignIpv6AddressOnCreation": false,
      "Ipv6CidrBlockAssociationSet": [],
      "SubnetArn": "arn:aws:ec2:eu-north-1:405466951861:subnet/subnet-020081bf6b3367aa9",
      "EnableDns64": false,
      "Ipv6Native": false,
      "PrivateDnsNameOptionsOnLaunch": {
        "HostnameType": "ip-name",
        "EnableResourceNameDnsARecord": false,
        "EnableResourceNameDnsAAAARecord": false
      },
      "BlockPublicAccessStates": {
        "InternetGatewayBlockMode": "off"
      },
      "SubnetId": "subnet-020081bf6b3367aa9",
      "State": "available",
      "VpcId": "vpc-068af8c85c6322683",
      "CidrBlock": "172.31.16.0/20",
      "AvailableIpAddressCount": 4091,
      "AvailabilityZone": "eu-north-1a",
      "DefaultForAz": true,
      "MapPublicIpOnLaunch": true
    }
  ],
  "route_tables": [
    {
      "Associations": [
        {
          "Main": true,
          "RouteTableAssociationId": "rtbassoc-0eb05ddb3d35133f9",
          "RouteTableId": "rtb-092d8843edec70dc9",
          "AssociationState": {
            "State": "associated"
          }
        }
      ],
      "PropagatingVgws": [],
      "RouteTableId": "rtb-092d8843edec70dc9",
      "Routes": [
        {
          "DestinationCidrBlock": "172.31.0.0/16",
          "GatewayId": "local",
          "Origin": "CreateRouteTable",
          "State": "active"
        },
        {
          "DestinationCidrBlock": "0.0.0.0/0",
          "GatewayId": "igw-0b3c19ba814f90d43",
          "Origin": "CreateRoute",
          "State": "active"
        }
      ],
      "Tags": [],
      "VpcId": "vpc-068af8c85c6322683",
      "OwnerId": "405466951861"
    }
  ],
  "internet_gateways": [
    {
      "Attachments": [
        {
          "State": "available",
          "VpcId": "vpc-068af8c85c6322683"
        }
      ],
      "InternetGatewayId": "igw-0b3c19ba814f90d43",
      "OwnerId": "405466951861",
      "Tags": []
    }
  ],
  "nat_gateways": [],
  "flow_logs": [],
  "security_groups": [
    {
      "GroupId": "sg-0e6c90e953cd57000",
      "IpPermissionsEgress": [
        {
          "IpProtocol": "-1",
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ],
      "VpcId": "vpc-068af8c85c6322683",
      "SecurityGroupArn": "arn:aws:ec2:eu-north-1:405466951861:security-group/sg-0e6c90e953cd57000",
      "OwnerId": "405466951861",
      "GroupName": "default",
      "Description": "default VPC security group",
      "IpPermissions": [
        {
          "IpProtocol": "-1",
          "UserIdGroupPairs": [
            {
              "UserId": "405466951861",
              "GroupId": "sg-0e6c90e953cd57000"
            }
          ],
          "IpRanges": [],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ]
    }
  ],
  "network_acls": [
    {
      "Associations": [
        {
          "NetworkAclAssociationId": "aclassoc-003ec042846097c3d",
          "NetworkAclId": "acl-0e3bc20e8405a2008",
          "SubnetId": "subnet-0b7e1287a1c959edd"
        },
        {
          "NetworkAclAssociationId": "aclassoc-058d58b9d3784c24c",
          "NetworkAclId": "acl-0e3bc20e8405a2008",
          "SubnetId": "subnet-03ef754e024bb86f5"
        },
        {
          "NetworkAclAssociationId": "aclassoc-06c4e259bc17c1983",
          "NetworkAclId": "acl-0e3bc20e8405a2008",
          "SubnetId": "subnet-020081bf6b3367aa9"
        }
      ],
      "Entries": [
        {
          "CidrBlock": "0.0.0.0/0",
          "Egress": true,
          "Protocol": "-1",
          "RuleAction": "allow",
          "RuleNumber": 100
        },
        {
          "CidrBlock": "0.0.0.0/0",
          "Egress": true,
          "Protocol": "-1",
          "RuleAction": "deny",
          "RuleNumber": 32767
        },
        {
          "CidrBlock": "0.0.0.0/0",
          "Egress": false,
          "Protocol": "-1",
          "RuleAction": "allow",
          "RuleNumber": 100
        },
        {
          "CidrBlock": "0.0.0.0/0",
          "Egress": false,
          "Protocol": "-1",
          "RuleAction": "deny",
          "RuleNumber": 32767
        }
      ],
      "IsDefault": true,
      "NetworkAclId": "acl-0e3bc20e8405a2008",
      "Tags": [],
      "VpcId": "vpc-068af8c85c6322683",
      "OwnerId": "405466951861"
    }
  ],
  "vpc_peering_connections": [],
  "vpn_connections": [],
  "vpc_endpoints": []
}
